--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h2 class="city">Detroit</h2>
                 <div class="details">
                     <div class="col">
-                        <img src="Images/Humidity.png">
+                        <img src="Images/humidity.png">
                         <div>
                             <p class="humidity">50%</p>
                             <p>Humidity</p>
